# agentic-hf

./: .dockerignore  .env-example.example  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  PHASE_2_2_SUMMARY.md  PHASE_2_3_DELIVERY.md  README.md  TASK6_COMPLETION_SUMMARY.md  TASK6_FINAL_REPORT.md  TASK6_INDEX.md  TASK6_QUICKSTART.md  TASK6_TEST_REPORT.md  docker-compose.yml  pyproject.toml  run.py
.claude/: DATA_HUBS_DESIGN_GUIDE.md  PHASE_2_3_CHECKLIST.md  PHASE_2_3_IMPLEMENTATION_SUMMARY.md  PHASE_2_4_DELIVERY_SUMMARY.md  PHASE_2_4_IMPLEMENTATION_COMPLETE.txt  PHASE_2_4_INDEX.md  PHASE_2_4_QUICKSTART.md  PHASE_2_4_README.md  PHASE_2_4_REFERENCE.md  PHASE_2_4_TECHNICAL_DETAILS.md  phase-1-3-completion.md  phase-1-4-completion.md  phase-1-5-completion.md  phase-2-1-completion.md  phase-2-1-quickstart.md  phase-2-3-scrollytelling.md  phase-2-4-completion.md  phase-2-6-completion.md  settings.local.json
docs/: polymarket-integration.md
docs/plans/: 2026-03-05-agentic-hf-design.md  (+6 more)
scripts/: browser_screenshot_research.py  test_reasoning_capture.py  verify_deployment.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_alpha_pod.py  test_bus.py  test_clock.py  test_data.py  test_execution.py  test_models.py  test_outcome_tracker.py  test_regime.py  test_sentiment_pipeline.py  test_signal_scorer.py  test_trade_outcomes.py  test_trade_proposal.py
web/: .env.example  .gitignore  INDEX.md  PHASE_2_2_DELIVERY.md  PHASE_2_3_README.md  README.md  SCROLLYTELLING_GUIDE.md  SETUP.md  package.json  tailwind.config.js  vite.config.ts
(+152 files in other folders)
