[project]
name = "agentic-hf"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.40.0",
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "numpy>=1.26",
    "duckdb>=0.10",
    "textual>=0.70",
    "rich>=13.0",
    "structlog>=24.0",
    "feedparser>=6.0",
    "praw>=7.0",
    "fredapi>=0.5",
    "gdeltdoc>=1.1",
    "alpha-vantage>=2.3",
    "ccxt>=4.0",
    "pycoingecko>=3.0",
    "pyarrow>=14.0",
    "snscrape>=0.7",
    "aiohttp>=3.9",
    "tenacity>=8.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
